<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lineLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.xx_user.projectslistretrofit.InfoActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/title"
                    android:textAlignment="gravity"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp" >

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_gravity="center"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/logo" />

                    <ProgressBar
                        android:id="@+id/logoProgressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="visible" />
                </FrameLayout>

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/description"
                    android:textAlignment="gravity"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/technologies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/technologies"
                    android:textAlignment="gravity"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/supportedScreens"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/supportedScreens"
                    android:textAlignment="gravity"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/solutionTypes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/solutionTypes"
                    android:textAlignment="gravity"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/clientName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/clientName"
                    android:textAlignment="gravity"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <android.support.v4.view.ViewPager
                    android:id="@+id/pager"
                    android:layout_width="match_parent"
                    android:layout_height="300dp" />

                <Button
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="0"
                    android:width="98dp"
                    android:text="@string/backBtn" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>





